terraform/main.tf
# PROVIDERS:
# Here, we specify what cloud service will provide our resources.
# In other words, it's simply where we specify what cloud provider
# we intend on using. In this case, it's AWS.
provider "aws" {
  profile    = var.profile
  region     = var.region
}


# DATA:
# Data blocks are basically like APIs where we can fetch dynamic 
# data from.  This allows us to, for example, retrieve a list of
# valid amis for EC2 instances, or a list of possible availability zones.
data "aws_ssm_parameter" "ami" {
  name = "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
}


# RESOURCES:
# These are the actual cloud resources (VPCs, EC2 instances, etc).

# Networking

resource "aws_vpc" "vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = "true"
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
}

resource "aws_subnet" "subnet1" {
  cidr_block              = "10.0.0.0/24"
  vpc_id                  = aws_vpc.vpc.id
  map_public_ip_on_launch = "true"
}


# ROUTING
resource "aws_route_table" "rtb" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "rta-subnet1" {
  subnet_id      = aws_subnet.subnet1.id
  route_table_id = aws_route_table.rtb.id
}



# SECURITY GROUPS
# Nginx security group
resource "aws_security_group" "nginx-sg" {
  name   = "nginx_sg"
  vpc_id = aws_vpc.vpc.id

  # HTTP access from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # outbound internet access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

# INSTANCES

resource "aws_instance" "nginx1" { # an EC2 instance
  ami                    = nonsensitive(data.aws_ssm_parameter.ami.value)
  instance_type          = "t2.micro"
  subnet_id              = aws_subnet.subnet1.id
  vpc_security_group_ids = [aws_security_group.nginx-sg.id]

  user_data = <<EOF
		#! /bin/bash
		sudo amazon-linux-extras install -y nginx1
		sudo service nginx start
		sudo rm /usr/share/nginx/html/index.html
		echo 'Hellooooo from the EC2 nginx server!!!'
	EOF
}
